<resources>
    <string name="app_name">QuizChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_question">Qual região do Brasil possui o bioma Caatinga?</string>
    <string name="first_answer_first_question">Sudeste</string>
    <string name="fourth_answer_first_question">Sul</string>
    <string name="second_answer_first_question">Nordeste</string>
    <string name="third_answer_first_question">Centro-Oeste</string>
    <string name="question_number_one_position">Questão 1 de 8</string>
    <string name="second_question">Em qual cidade do Brasil fica o Cristo Redentor?</string>
    <string name="first_answer_second_question">São Paulo</string>
    <string name="fourth_answer_second_question">Sergipe</string>
    <string name="second_answer_second_question">Palmas</string>
    <string name="third_answer_second_question">Rio de Janeiro</string>
    <string name="question_number_two_position">Questão 2 de 8</string>
    <string name="question_three">Quais os Países da América do Sul, que o Brasil não faz Fronteira?</string>
    <string name="first_answer_third_question">Uruguai e Argentina</string>
    <string name="fourth_answer_third_question">Argentina e Equador</string>
    <string name="second_answer_third_question">Paraguai e Suriname</string>
    <string name="third_answer_third_question">Chile e Equador</string>
    <string name="question_number_three_position">Questão 3 de 8</string>
    <string name="fourth_question">Todo capixaba nasceu em:</string>
    <string name="first_answer_fourth_question">Rio de Janeiro</string>
    <string name="fourth_answer_fourth_question">Espírito Santo</string>
    <string name="second_answer_fourth_question">Pará</string>
    <string name="third_answer_fourth_question">Tocantins</string>
    <string name="question_number_four_position">Questão 4 de 8</string>
    <string name="fifth_question">Qual foi a primeira capital do Brasil?</string>
    <string name="first_answer_fifth_question">São Paulo</string>
    <string name="fourth_answer_fifth_question">Brasília</string>
    <string name="second_answer_fifth_question">Rio de Janeiro</string>
    <string name="third_answer_fifth_question">Salvador</string>
    <string name="question_number_five_position">Questão 5 de 8</string>
    <string name="sixth_question">Qual é o menor estado do Brasil?</string>
    <string name="first_answer_sixth_question">Sergipe</string>
    <string name="fourth_answer_sixth_question">Goiás</string>
    <string name="second_answer_sixth_question">Paraíba</string>
    <string name="third_answer_sixth_question">Natal</string>
    <string name="question_number_six_position">Questão 6 de 8</string>
    <string name="seventh_question">Qual a cidade mais populosa do Brasil?</string>
    <string name="first_answer_seventh_question">Amazonas</string>
    <string name="fourth_answer_seventh_question">Salvador</string>
    <string name="second_answer_seventh_question">São Paulo</string>
    <string name="third_answer_seventh_question">Rio de Janeiro</string>
    <string name="question_number_seven_position">Questão 7 de 8</string>
    <string name="eighth_question">Qual cidade mais velha do Brasil?</string>
    <string name="first_answer_eighth_question">São Vicente</string>
    <string name="fourth_answer_eighth_question">Salvador</string>
    <string name="second_answer_eighth_question">Recife</string>
    <string name="third_answer_eighth_question">Fortaleza</string>
    <string name="question_number_eight_position">Questão 8 de 8</string>
    <string name="congratulations">Parabéns!</string>
    <string name="you_win">Você venceu o jogo!</string>
    <string name="again">Jogar Novamente?</string>
    <string name="go_play">Vamo!</string>
    <string name="wrong_answer">Resposta Errada!</string>
    <string name="you_loose">Você perdeu o jogo!</string>
    <string name="welcome_text">Bem-Vindo</string>
    <string name="nickname_text">Insira seu nickname, por favor!</string>
    <string name="nickname_hint">Nickname</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="logonikcname">logoNikcname</string>
</resources>