<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_default"
    android:padding="25dp"
    tools:context=".fragments.QuizGameLevelOneFragment">


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="17dp"
        android:indeterminate="true"
        app:indicatorColor="@color/pink"
        app:indicatorInset="5dp"
        app:indicatorSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/caatingaImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/questionNumberOneTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:showDelay="@integer/material_motion_duration_short_1"
        app:trackColor="@color/white"
        app:trackCornerRadius="20dp"
        app:trackThickness="4dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countDownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
        app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
        app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionOneTextView"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/first_question"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caatingaImageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="10"
            android:minHeight="50dp"
            android:outlineSpotShadowColor="@color/pink"
            android:progress="0" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/firstButtonQuestionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/first_answer_first_question"
        app:layout_constraintEnd_toEndOf="@+id/secondButtonQuestionOne"
        app:layout_constraintStart_toStartOf="@+id/secondButtonQuestionOne"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fourthButtonQuestionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:text="@string/fourth_answer_first_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonQuestionOne" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/secondButtonQuestionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/second_answer_first_question"
        app:layout_constraintEnd_toEndOf="@+id/thirdButtonQuestionOne"
        app:layout_constraintStart_toStartOf="@+id/thirdButtonQuestionOne"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonQuestionOne" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/thirdButtonQuestionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/third_answer_first_question"
        app:layout_constraintEnd_toEndOf="@+id/fourthButtonQuestionOne"
        app:layout_constraintStart_toStartOf="@+id/fourthButtonQuestionOne"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonQuestionOne" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionNumberOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="190dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/question_number_one_position"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/caatingaImageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/caatinga_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
